# firestarter

./: .aiexclude  .gitignore  .gitmodules  CLAUDE.md  README.md  name_firmware.py  platformio.ini  tmp  webhooks.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: update_version.py
.github/workflows/: beta-build.yml  build.yml  py32f071.yml
doc/: AT28C04-ADAPTER.md  SHIELD-REVISIONS.md
include/: chip.h  config.h  debug.h  dev_tools.h  eeprom_28c.h  eprom.h  eprom_operations.h  firestarter.h  flash.h  flash_intel.h  flash_type_2.h  flash_type_3.h  flash_type_4.h  flash_util.h  flash_utils.h  frame_vectors.h  hardware_operations.h  hw_operations.h  ic_operations.h  json_parser.h  logging.h  logging_id.h  memory.h  memory_utils.h  messages.h  not_implemented.h  operation_utils.h  rurp_config_utils.h  rurp_defines.h  rurp_hw_rev_utils.h  rurp_internal_register_utils.h  rurp_pinout.h  rurp_platform.h  rurp_platform_compat.h  rurp_register_utils.h  rurp_serial_utils.h  rurp_shield.h  rurp_types.h  rurp_utils.h  rurp_vpp.h  (+3 more)
include/avr/: pgmspace.h
include/boards/: py32f071_rurp_shield.h
lib/jsmn/src/: jsmn.c  jsmn.h
platform/py32f071/: CMakeLists.txt  PORTING.md  README.md
platform/py32f071/cmake/: arm-none-eabi.cmake  write_checksums.cmake
platform/py32f071/include/: Arduino.h  py32f071_board.h  py32f071_hal_conf.h  py32f071_regs.h  usb_config.h
platform/py32f071/include/avr/: pgmspace.h
platform/py32f071/linker/: PY32F071xB_FLASH.ld
platform/py32f071/src/: analog.c  board.c  config.cpp  firestarter_entry.cpp  gpio.c  main.c  main.cpp  platform_compat.cpp  py32f071_rurp_shield.cpp  registers.cpp  storage.c  timing.c  timing.cpp  usb.c  usb_cdc.c  vpp_target.c
platform/py32f071/startup/: startup_py32f071.s
scripts/: check_uno_ram.sh
src/: chip.c  debug.cpp  dev_tools.cpp  eprom.c  eprom.cpp  eprom_operations.cpp  firestarter.cpp  flash.cpp  flash_type_2.cpp  flash_type_3.cpp  flash_util.cpp  hardware_operations.cpp  hw_operations.cpp  ic_operations.cpp  json_parser.c  leonardo_rurp_shield.cpp  logging.c  main.cpp  memory.c  memory.cpp  memory_utils.cpp  messages.c  operation_utils.cpp  rurp_config_utils.cpp  rurp_vpp.cpp  sram.c  sram.cpp  uno_rurp_shield.c  uno_rurp_shield.cpp  utils.cpp
src/boards/: leonardo_rurp_shield.cpp  nucleo_l010rb_rurp_shield.cpp  rurp_common.cpp  rurp_serial_utils.cpp  uno_r4_minima_rurp_shield.cpp  uno_rurp_shield.cpp
src/proms/: eeprom_28c.cpp  eprom.cpp  flash.cpp  flash_intel.cpp  flash_type_2.cpp  flash_type_3.cpp  flash_type_4.cpp  flash_utils.cpp  memory.cpp  not_implemented.cpp  sram.cpp
test/native/avr/_shared/: host_stubs_common.inc  validation_matrix.h
test/native/avr/test_cobs_cmd_frame/: host_stubs.cpp  serial_read_mock.h  test_cobs_cmd_frame.cpp
test/native/avr/test_cobs_data_frame/: host_stubs.cpp  test_cobs_data_frame.cpp
test/native/avr/test_data_input/: host_stubs.cpp  test_rurp_set_data_input.cpp
test/native/avr/test_data_input/avr/: pgmspace.h
test/native/avr/test_dispatch/: host_stubs.cpp  test_configure_memory.cpp
test/native/avr/test_dispatch/avr/: pgmspace.h
test/native/avr/test_eeprom28c_chip_id/: host_stubs.cpp  test_eeprom28c_chip_id.cpp
test/native/avr/test_eeprom28c_chip_id/avr/: pgmspace.h
test/native/avr/test_flash_intel_vpp/: host_stubs.cpp  test_flash_intel_vpp.cpp
test/native/avr/test_frame_vectors/: host_stubs.cpp  serial_read_mock.h  test_frame_vectors.cpp
test/native/avr/test_messages/: host_stubs.cpp  serial_read_mock.h  test_rurp_log_id.cpp
test/native/avr/test_messages/avr/: pgmspace.h
test/native/avr/test_not_implemented/: host_stubs.cpp  test_not_implemented.cpp
test/native/avr/test_read_timing/: host_stubs.cpp  test_read_timing_params.cpp
test/native/avr/test_read_timing/avr/: pgmspace.h
test/native/avr/test_val_eeprom28c/: host_stubs.cpp  test_val_eeprom28c.cpp
test/native/avr/test_val_eprom/: host_stubs.cpp  test_val_eprom.cpp
test/native/avr/test_val_flash3/: host_stubs.cpp  test_val_flash3.cpp
test/native/avr/test_val_flash4/: host_stubs.cpp  test_val_flash4.cpp
test/native/avr/test_val_flash_intel/: host_stubs.cpp  test_val_flash_intel.cpp
test/native/avr/test_val_sram/: host_stubs.cpp  test_val_sram.cpp
tests/: test_update_version.py
tools/catalog/: codegen.py  codegen_vectors.py  frame-vectors.toml  messages.toml
